--- a/username.com.conf
+++ b/username.com.conf
@@ -4,8 +4,8 @@ server {
     location / {
         proxy_pass https://username.github.io;
 
-        proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
