Add A redirect to a main site
https://nginx.org/en/docs/http/converting_rewrite_rules.html

--- a/username.com.conf
+++ b/username.com.conf
@@ -1,5 +1,11 @@
+# https://nginx.org/en/docs/http/converting_rewrite_rules.html
 server {
-    server_name username.com www.username.com;
+    server_name  username.com;
+    return       301 $scheme://www.username.com$request_uri;
+}
+
+server {
+    server_name www.username.com;
 
     location / {
         proxy_pass https://username.github.io;
