--- a/username.com.conf
+++ b/username.com.conf
@@ -7,6 +7,10 @@ server {
 server {
     server_name www.username.com;
 
+    location /hooks/ {
+        proxy_pass http://127.0.0.1:9000/hooks/;
+    }
+
     location / {
         proxy_pass https://username.github.io;
 
